--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<nav>
 				<ul>
 					<li><a href="#about">About</a></li>
-					<li><a href="#works">Work</a></li>
+					<li><a href="#works">Works</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<!-- <li><a href="#elements">Elements</a></li> -->
 				</ul>
@@ -96,7 +96,7 @@
 						techniques</a>,
 					in which they are classified the best known recognition techniques to identify virtual environments,
 					the different techniques contained in each box shown on the site are matched with malware samples.
-					The malware samples are PE, which is the format of files executable on the Windows operating system.
+					The malware samples are PE, which is the format of executable files on the Windows operating system.
 				</p>
 				<hr />
 				<h4>Refactoring Impact</h4>
