--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<span class="image main"><img src="images/workbg.jpg" alt="" /></span>
 
 				<h4>Java Code Smells Detector</h4>
-				<p>Java Code Smells Detector is is a tool built, starting from <a
+				<p>Java Code Smells Detector is a tool built, starting from <a
 						href="https://javacc.github.io/javacc/"></a>JavaCC and JJTree tools, for the university course
 					of
 					Programming Languages and Compilers.
@@ -96,7 +96,7 @@
 						techniques</a>,
 					in which they are classified the best known recognition techniques to identify virtual environments,
 					the different techniques contained in each box shown on the site are matched with malware samples.
-					The malware samples are PE, which is the format of executable files on the Windows operating system.
+					The malware samples are PE, which is the format of executable files on the Windows operative system.
 				</p>
 				<hr />
 				<h4>Refactoring Impact</h4>
