--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<nav>
 				<ul>
 					<li><a href="#about">About</a></li>
-					<li><a href="#works">Works</a></li>
+					<!-- <li><a href="#works">Works</a></li> -->
 					<li><a href="#contact">Contact</a></li>
 					<!-- <li><a href="#elements">Elements</a></li> -->
 				</ul>
@@ -48,9 +48,9 @@
 					passions are or what music I
 					listen to. All there is to know about me is that I am, as well as a computer engineer, a software
 					and hardware technology enthusiast.<br>
-					I created these web pages to keep track of some work done in personal, university and work spheres,
+					<!-- I created these web pages to keep track of some work done in personal, university and work spheres,
 					but the full list is <a href="https://github.com/RaffaeleFranco?tab=repositories">here</a>.<br>
-					Instead <a href="cv.pdf">here</a> you can find my CV.
+					Instead <a href="cv.pdf">here</a> you can find my CV. -->
 
 				</p>
 				<div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="it_IT"
@@ -58,7 +58,7 @@
 						href='https://it.linkedin.com/in/raffaele-franco?trk=profile-badge'>Raffaele Franco</a></div>
 			</article>
 
-			<!-- Works -->
+			<!-- Works 
 			<article id="works">
 				<h2 class="major">Works</h2>
 				<span class="image main"><img src="images/workbg.jpg" alt="" /></span>
