Added profile image

--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
 			<div class="content">
 				<div class="inner">
 					<h1>Raffaele Franco</h1>
-					<p>Homepage</p>
+					<span class="profile main"><img src="images/profile.jpg"/></span>
 				</div>
 			</div>
 			<nav>
 				<ul>
 					<li><a href="#about">About</a></li>
-					<!-- <li><a href="#works">Works</a></li> -->
 					<li><a href="#contact">Contact</a></li>
 					<!-- <li><a href="#elements">Elements</a></li> -->
 				</ul>
@@ -48,121 +47,7 @@
 					passions are or what music I
 					listen to. All there is to know about me is that I am, as well as a computer engineer, a software
 					and hardware technology enthusiast.<br>
-					<!-- I created these web pages to keep track of some work done in personal, university and work spheres,
-					but the full list is <a href="https://github.com/RaffaeleFranco?tab=repositories">here</a>.<br>
-					Instead <a href="cv.pdf">here</a> you can find my CV. -->
 				</p>
-			</article>
-
-			<!-- Works 
-			<article id="works">
-				<h2 class="major">Works</h2>
-				<span class="image main"><img src="images/workbg.jpg" alt="" /></span>
-
-				<h4>Java Code Smells Detector</h4>
-				<p>Java Code Smells Detector is a tool built, starting from <a
-						href="https://javacc.github.io/javacc/"></a>JavaCC and JJTree tools, for the university course
-					of
-					Programming Languages and Compilers.
-					<br>As the name suggests, it is a static analysis tool that analyzes Java code in order to identify
-					specific code smells.
-					The specification of the tool starts from the definition of a frontend component that deals with
-					syntactically and semantically analyzing the Java code starting from the tokens and building an
-					abstract
-					syntactic tree which is an intermedy rappresentation of start code. This rappresentation is then
-					passed to a backend component that is responsible for calculating
-					the object-oriented metrics and detecting code smells.
-					The code smells detected are:
-				<ol>
-					<li>Long parameter list</li>
-					<li>Long method</li>
-					<li>Large class</li>
-					<li>God class</li>
-					<li>Duplicated code</li>
-				</ol>
-				</p>
-				<hr />
-				<h4>Evasion Techniques in malware</h4>
-				<p>The goal of this cyber security work was to create a toolchain built in Python to be performed
-					downstream of a
-					malware analysis process that allows to identify malware that make use of evasion techniques.<br>
-					The scripts, through IDA PRO, go to identify any evasion techniques adopted by the malware by
-					reporting each occurrence in a SQLite database.
-					Starting from Check Point Research site about on <a href="https://evasions.checkpoint.com/">evasion
-						techniques</a>,
-					in which they are classified the best known recognition techniques to identify virtual environments,
-					the different techniques contained in each box shown on the site are matched with malware samples.
-					The malware samples are PE, which is the format of executable files on the Windows operative system.
-				</p>
-				<hr />
-				<h4>Refactoring Impact</h4>
-				<p>Refactoring Impact is a toolchain developed for a Unisannio exam for the analysis of refactoring on
-					code smells and influence on technical debt in Java software repositories. The objective of the
-					study is to evaluate the impact of refactoring on code smells and calculate the technical debt by
-					analyzing various open source systems written in Java. In particular, for each code smell removed,
-					the technical debt relating to the smell before and after the refactoring is considered, in order to
-					calculate the difference and establish whether the technical debt is improved, pejorative or stable.
-					<a href="https://github.com/RaffaeleFranco/Refactoring-Impact">Link</a>
-				</p>
-				<div class="table-wrapper">
-					<table>
-						<thead>
-							<tr>
-								<th>Tool</th>
-								<th>Purpose</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td><a href="https://github.com/tsantalis/RefactoringMiner">RefactoringMiner</a></td>
-								<td>To detect refactorings applied in the history of a Java project.</td>
-							</tr>
-							<tr>
-								<td><a href="https://github.com/tushartushar/DesigniteJava">DesigniteJava</a></td>
-								<td>To detect implementation smells</td>
-							</tr>
-							<tr>
-								<td><a href="https://github.com/SonarSource/sonar-scanner-cli">SonarScanner</a></td>
-								<td>To run code analysis on SonarQube</td>
-							</tr>
-							<tr>
-								<td><a href="https://github.com/SonarSource/sonarqube">SonarQube</a></td>
-								<td>To show health of an application and highlight issues introduced</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<hr />
-				<h4>IoT system</h4>
-				<p>2020: An IoT system developed for a Unisannio course formed by:
-				<ul>
-					<li>information integration layer
-						program code: server exposing REST API, written in Node.js</li>
-					<li>physical layer program code: to
-						be loaded on the microcontroller (NUCLEO-F401RE), written in C++.</li>
-				</ul>
-				The system gathers information via microcontroller and sensors, in this specific case an accelerometer.
-				Once the data of interest has been collected, the microcontroller sends the data to the server through
-				the IEEE 802.11 technology, which takes place through an ESP8266 placed on the NUCLEO-F401RE.
-				<br>The REST server written in Node.js during the experimentation and testing phase was deployed on a
-				Raspberry PI 4 board.
-				<br>As this is a university project, it was carried out with other people, for more information visit
-				the
-				repository. <a href="https://github.com/lorenzosax/iot-vibrations-system">Link</a></p>
-				<hr />
-				<h4>ComBad</h4>
-				<p>2019: ComBad (stands for Committers/Bad Code Smells) associates the bad code smells found in
-					some GitHub software repositories to their committers. This is part of my bachelor's degree
-					thesis in Computer Engineering at Unisannio, which consists in the analysis of some open-source
-					software systems in order to analyze their quality and understand which of the developers was
-					more inclined to introduce potential code smells.
-					<a href="https://github.com/RaffaeleFranco/ComBad">Link</a>
-				</p>
-
-				<hr />
-				<blockquote>Choose a job you love, and you will never have to work a day in your life.<br>(Confucio)
-				</blockquote>
-
 			</article>
 
 			<!-- Elements -->
